--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^39.0.1",
+        "@ckeditor/ckeditor5-react": "^6.1.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.3",
@@ -16,6 +18,8 @@
         "clsx": "^2.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
+        "react-html-parser": "^2.0.2",
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.14.2",
         "react-scripts": "5.0.1",
@@ -62,8 +66,10 @@
         "@types/node": "^20.4.9",
         "@types/react": "^18.2.19",
         "@types/react-dom": "^18.2.7",
+        "@types/react-html-parser": "^2.0.2",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^6.3.0",
+        "buffer": "^6.0.3",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^9.0.0",
         "eslint-config-standard-with-typescript": "^37.0.0",
